syntax = "proto3";

option go_package = "./pbuser";

package user;

service User {
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  repeated SignInUser Users = 1; 
}

message SignInUser {
  string token = 1;
  string role = 2;
  string name = 3;
  string surname = 4;
  string email = 5;
}
